--- a/services/customers/src/main/resources/application.yml
+++ b/services/customers/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
     url: jdbc:postgresql://${MS_101_CUSTOMERS_DB_HOST:localhost}:${MS_101_CUSTOMERS_DB_PORT:5432}/${MS_101_CUSTOMERS_DB_NAME:postgres}
     username: ${MS_101_CUSTOMERS_DB_USER}
     password: ${MS_101_CUSTOMERS_DB_PASS}
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
