--- a/services/customer-management/pom.xml
+++ b/services/customer-management/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>info.akaki</groupId>
-        <artifactId>services</artifactId>
+        <artifactId>microservices</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>customers</artifactId>
+    <artifactId>customer-management</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
