--- a/services/service-management/pom.xml
+++ b/services/service-management/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>services</artifactId>
+        <artifactId>microservices</artifactId>
         <groupId>info.akaki</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>utility</artifactId>
+    <artifactId>service-management</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
