--- a/services/pom.xml
+++ b/services/pom.xml
@@ -17,6 +17,7 @@
       <module>subscription-management</module>
       <module>service-delivery</module>
       <module>billing-and-payment</module>
+    <module>eureka-server</module>
   </modules>
 
   <name>microservices</name>
@@ -27,7 +28,20 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <spring.boot.maven.plugin.version>2.7.0</spring.boot.maven.plugin.version>
+    <spring.cloud-version>2021.0.3</spring.cloud-version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud-version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
