--- a/services/eureka-server/pom.xml
+++ b/services/eureka-server/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+        <!-- https://cloud.spring.io/spring-cloud-netflix/multi/multi_spring-cloud-eureka-server.html#_jdk_11_support -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
